// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createMethods with extraExport 1`] = `
"import { Enum } from '@prisma/client';
import { faker } from '@faker-js/faker';

export * from '../utils/fakeImports'

export function fakeUser() {
  return {
    email: faker.internet.email(),
    name: faker.name.fullName(),
    age: faker.datatype.number({min: 0, max: 99}),
    firstName: faker.name.firstName(),
    lastName: faker.name.lastName(),
    string: faker.lorem.words(5),
    nullableString: undefined,
    boolean: faker.datatype.boolean(),
    nullableBoolean: undefined,
    int: faker.datatype.number(),
    nullableInt: undefined,
    bigInt: faker.datatype.number(),
    nullableBigInt: undefined,
    float: faker.datatype.float(),
    nullableFloat: undefined,
    dateTime: faker.datatype.datetime(),
    nullableDateTime: undefined,
    stringArray: faker.lorem.words(5).split(' '),
    intArray: [faker.datatype.number(),faker.datatype.number(),faker.datatype.number(),faker.datatype.number(),faker.datatype.number()],
    bigIntArray: [faker.datatype.number(),faker.datatype.number(),faker.datatype.number(),faker.datatype.number(),faker.datatype.number()],
    floatArray: [faker.datatype.float(),faker.datatype.float(),faker.datatype.float(),faker.datatype.float(),faker.datatype.float()],
    booleanArray: [faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean()],
    dateTimeArray: [faker.datatype.datetime(),faker.datatype.datetime(),faker.datatype.datetime(),faker.datatype.datetime(),faker.datatype.datetime()],
    json: {test: faker.lorem.word()},
    nullableJson: undefined,
    enum: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
    nullableEnum: undefined,
  };
}
export function fakeUserComplete() {
  return {
    id: faker.datatype.uuid(),
    email: faker.internet.email(),
    name: faker.name.fullName(),
    age: faker.datatype.number({min: 0, max: 99}),
    firstName: faker.name.firstName(),
    lastName: faker.name.lastName(),
    string: faker.lorem.words(5),
    stringWithDefault: 'default',
    nullableString: undefined,
    boolean: faker.datatype.boolean(),
    booleanWithDefault: true,
    nullableBoolean: undefined,
    int: faker.datatype.number(),
    intWithDefault: 1,
    nullableInt: undefined,
    bigInt: faker.datatype.number(),
    bigIntWithDefault: 1,
    nullableBigInt: undefined,
    float: faker.datatype.float(),
    floatWithDefault: 1.1,
    nullableFloat: undefined,
    dateTime: faker.datatype.datetime(),
    dateTimeWithDefault: new Date(),
    nullableDateTime: undefined,
    stringArray: faker.lorem.words(5).split(' '),
    intArray: [faker.datatype.number(),faker.datatype.number(),faker.datatype.number(),faker.datatype.number(),faker.datatype.number()],
    bigIntArray: [faker.datatype.number(),faker.datatype.number(),faker.datatype.number(),faker.datatype.number(),faker.datatype.number()],
    floatArray: [faker.datatype.float(),faker.datatype.float(),faker.datatype.float(),faker.datatype.float(),faker.datatype.float()],
    booleanArray: [faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean()],
    dateTimeArray: [faker.datatype.datetime(),faker.datatype.datetime(),faker.datatype.datetime(),faker.datatype.datetime(),faker.datatype.datetime()],
    json: {test: faker.lorem.word()},
    jsonWithDefault: {},
    jsonWithDefaultAndFake: {test2: faker.lorem.word()},
    nullableJson: undefined,
    enum: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
    enumWithDefault: Enum.A,
    nullableEnum: undefined,
  };
}
export function fakeUser2Complete() {
  return {
    id: faker.datatype.number(),
  };
}
export function fakeUserRelationComplete() {
  return {
    id: faker.datatype.uuid(),
    userId: faker.datatype.uuid(),
    userId2: faker.datatype.uuid(),
  };
}
export function fakeUser2RelationComplete() {
  return {
    id: faker.datatype.uuid(),
    user2Id: faker.datatype.number(),
  };
}
"
`;

exports[`createMethods with extraImport 1`] = `
"import { Enum } from '@prisma/client';
import { faker } from '@faker-js/faker';
import {myCustomFunction} from '../utils/fakeImports'


export function fakeUser() {
  return {
    email: faker.internet.email(),
    name: faker.name.fullName(),
    age: faker.datatype.number({min: 0, max: 99}),
    firstName: faker.name.firstName(),
    lastName: faker.name.lastName(),
    string: faker.lorem.words(5),
    nullableString: undefined,
    boolean: faker.datatype.boolean(),
    nullableBoolean: undefined,
    int: faker.datatype.number(),
    nullableInt: undefined,
    bigInt: faker.datatype.number(),
    nullableBigInt: undefined,
    float: faker.datatype.float(),
    nullableFloat: undefined,
    dateTime: faker.datatype.datetime(),
    nullableDateTime: undefined,
    stringArray: faker.lorem.words(5).split(' '),
    intArray: [faker.datatype.number(),faker.datatype.number(),faker.datatype.number(),faker.datatype.number(),faker.datatype.number()],
    bigIntArray: [faker.datatype.number(),faker.datatype.number(),faker.datatype.number(),faker.datatype.number(),faker.datatype.number()],
    floatArray: [faker.datatype.float(),faker.datatype.float(),faker.datatype.float(),faker.datatype.float(),faker.datatype.float()],
    booleanArray: [faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean()],
    dateTimeArray: [faker.datatype.datetime(),faker.datatype.datetime(),faker.datatype.datetime(),faker.datatype.datetime(),faker.datatype.datetime()],
    json: {test: faker.lorem.word()},
    nullableJson: undefined,
    enum: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
    nullableEnum: undefined,
  };
}
export function fakeUserComplete() {
  return {
    id: faker.datatype.uuid(),
    email: faker.internet.email(),
    name: faker.name.fullName(),
    age: faker.datatype.number({min: 0, max: 99}),
    firstName: faker.name.firstName(),
    lastName: faker.name.lastName(),
    string: faker.lorem.words(5),
    stringWithDefault: 'default',
    nullableString: undefined,
    boolean: faker.datatype.boolean(),
    booleanWithDefault: true,
    nullableBoolean: undefined,
    int: faker.datatype.number(),
    intWithDefault: 1,
    nullableInt: undefined,
    bigInt: faker.datatype.number(),
    bigIntWithDefault: 1,
    nullableBigInt: undefined,
    float: faker.datatype.float(),
    floatWithDefault: 1.1,
    nullableFloat: undefined,
    dateTime: faker.datatype.datetime(),
    dateTimeWithDefault: new Date(),
    nullableDateTime: undefined,
    stringArray: faker.lorem.words(5).split(' '),
    intArray: [faker.datatype.number(),faker.datatype.number(),faker.datatype.number(),faker.datatype.number(),faker.datatype.number()],
    bigIntArray: [faker.datatype.number(),faker.datatype.number(),faker.datatype.number(),faker.datatype.number(),faker.datatype.number()],
    floatArray: [faker.datatype.float(),faker.datatype.float(),faker.datatype.float(),faker.datatype.float(),faker.datatype.float()],
    booleanArray: [faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean()],
    dateTimeArray: [faker.datatype.datetime(),faker.datatype.datetime(),faker.datatype.datetime(),faker.datatype.datetime(),faker.datatype.datetime()],
    json: {test: faker.lorem.word()},
    jsonWithDefault: {},
    jsonWithDefaultAndFake: {test2: faker.lorem.word()},
    nullableJson: undefined,
    enum: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
    enumWithDefault: Enum.A,
    nullableEnum: undefined,
  };
}
export function fakeUser2Complete() {
  return {
    id: faker.datatype.number(),
  };
}
export function fakeUserRelationComplete() {
  return {
    id: faker.datatype.uuid(),
    userId: faker.datatype.uuid(),
    userId2: faker.datatype.uuid(),
  };
}
export function fakeUser2RelationComplete() {
  return {
    id: faker.datatype.uuid(),
    user2Id: faker.datatype.number(),
  };
}
"
`;

exports[`createMethods with extraImport and extraExport 1`] = `
"import { Enum } from '@prisma/client';
import { faker } from '@faker-js/faker';
import {myCustomFunction} from '../utils/fakeImports'
export * from '../utils/fakeImports'

export function fakeUser() {
  return {
    email: faker.internet.email(),
    name: faker.name.fullName(),
    age: faker.datatype.number({min: 0, max: 99}),
    firstName: faker.name.firstName(),
    lastName: faker.name.lastName(),
    string: faker.lorem.words(5),
    nullableString: undefined,
    boolean: faker.datatype.boolean(),
    nullableBoolean: undefined,
    int: faker.datatype.number(),
    nullableInt: undefined,
    bigInt: faker.datatype.number(),
    nullableBigInt: undefined,
    float: faker.datatype.float(),
    nullableFloat: undefined,
    dateTime: faker.datatype.datetime(),
    nullableDateTime: undefined,
    stringArray: faker.lorem.words(5).split(' '),
    intArray: [faker.datatype.number(),faker.datatype.number(),faker.datatype.number(),faker.datatype.number(),faker.datatype.number()],
    bigIntArray: [faker.datatype.number(),faker.datatype.number(),faker.datatype.number(),faker.datatype.number(),faker.datatype.number()],
    floatArray: [faker.datatype.float(),faker.datatype.float(),faker.datatype.float(),faker.datatype.float(),faker.datatype.float()],
    booleanArray: [faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean()],
    dateTimeArray: [faker.datatype.datetime(),faker.datatype.datetime(),faker.datatype.datetime(),faker.datatype.datetime(),faker.datatype.datetime()],
    json: {test: faker.lorem.word()},
    nullableJson: undefined,
    enum: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
    nullableEnum: undefined,
  };
}
export function fakeUserComplete() {
  return {
    id: faker.datatype.uuid(),
    email: faker.internet.email(),
    name: faker.name.fullName(),
    age: faker.datatype.number({min: 0, max: 99}),
    firstName: faker.name.firstName(),
    lastName: faker.name.lastName(),
    string: faker.lorem.words(5),
    stringWithDefault: 'default',
    nullableString: undefined,
    boolean: faker.datatype.boolean(),
    booleanWithDefault: true,
    nullableBoolean: undefined,
    int: faker.datatype.number(),
    intWithDefault: 1,
    nullableInt: undefined,
    bigInt: faker.datatype.number(),
    bigIntWithDefault: 1,
    nullableBigInt: undefined,
    float: faker.datatype.float(),
    floatWithDefault: 1.1,
    nullableFloat: undefined,
    dateTime: faker.datatype.datetime(),
    dateTimeWithDefault: new Date(),
    nullableDateTime: undefined,
    stringArray: faker.lorem.words(5).split(' '),
    intArray: [faker.datatype.number(),faker.datatype.number(),faker.datatype.number(),faker.datatype.number(),faker.datatype.number()],
    bigIntArray: [faker.datatype.number(),faker.datatype.number(),faker.datatype.number(),faker.datatype.number(),faker.datatype.number()],
    floatArray: [faker.datatype.float(),faker.datatype.float(),faker.datatype.float(),faker.datatype.float(),faker.datatype.float()],
    booleanArray: [faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean()],
    dateTimeArray: [faker.datatype.datetime(),faker.datatype.datetime(),faker.datatype.datetime(),faker.datatype.datetime(),faker.datatype.datetime()],
    json: {test: faker.lorem.word()},
    jsonWithDefault: {},
    jsonWithDefaultAndFake: {test2: faker.lorem.word()},
    nullableJson: undefined,
    enum: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
    enumWithDefault: Enum.A,
    nullableEnum: undefined,
  };
}
export function fakeUser2Complete() {
  return {
    id: faker.datatype.number(),
  };
}
export function fakeUserRelationComplete() {
  return {
    id: faker.datatype.uuid(),
    userId: faker.datatype.uuid(),
    userId2: faker.datatype.uuid(),
  };
}
export function fakeUser2RelationComplete() {
  return {
    id: faker.datatype.uuid(),
    user2Id: faker.datatype.number(),
  };
}
"
`;

exports[`createMethods without extraImport 1`] = `
"import { Enum } from '@prisma/client';
import { faker } from '@faker-js/faker';



export function fakeUser() {
  return {
    email: faker.internet.email(),
    name: faker.name.fullName(),
    age: faker.datatype.number({min: 0, max: 99}),
    firstName: faker.name.firstName(),
    lastName: faker.name.lastName(),
    string: faker.lorem.words(5),
    nullableString: undefined,
    boolean: faker.datatype.boolean(),
    nullableBoolean: undefined,
    int: faker.datatype.number(),
    nullableInt: undefined,
    bigInt: faker.datatype.number(),
    nullableBigInt: undefined,
    float: faker.datatype.float(),
    nullableFloat: undefined,
    dateTime: faker.datatype.datetime(),
    nullableDateTime: undefined,
    stringArray: faker.lorem.words(5).split(' '),
    intArray: [faker.datatype.number(),faker.datatype.number(),faker.datatype.number(),faker.datatype.number(),faker.datatype.number()],
    bigIntArray: [faker.datatype.number(),faker.datatype.number(),faker.datatype.number(),faker.datatype.number(),faker.datatype.number()],
    floatArray: [faker.datatype.float(),faker.datatype.float(),faker.datatype.float(),faker.datatype.float(),faker.datatype.float()],
    booleanArray: [faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean()],
    dateTimeArray: [faker.datatype.datetime(),faker.datatype.datetime(),faker.datatype.datetime(),faker.datatype.datetime(),faker.datatype.datetime()],
    json: {test: faker.lorem.word()},
    nullableJson: undefined,
    enum: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
    nullableEnum: undefined,
  };
}
export function fakeUserComplete() {
  return {
    id: faker.datatype.uuid(),
    email: faker.internet.email(),
    name: faker.name.fullName(),
    age: faker.datatype.number({min: 0, max: 99}),
    firstName: faker.name.firstName(),
    lastName: faker.name.lastName(),
    string: faker.lorem.words(5),
    stringWithDefault: 'default',
    nullableString: undefined,
    boolean: faker.datatype.boolean(),
    booleanWithDefault: true,
    nullableBoolean: undefined,
    int: faker.datatype.number(),
    intWithDefault: 1,
    nullableInt: undefined,
    bigInt: faker.datatype.number(),
    bigIntWithDefault: 1,
    nullableBigInt: undefined,
    float: faker.datatype.float(),
    floatWithDefault: 1.1,
    nullableFloat: undefined,
    dateTime: faker.datatype.datetime(),
    dateTimeWithDefault: new Date(),
    nullableDateTime: undefined,
    stringArray: faker.lorem.words(5).split(' '),
    intArray: [faker.datatype.number(),faker.datatype.number(),faker.datatype.number(),faker.datatype.number(),faker.datatype.number()],
    bigIntArray: [faker.datatype.number(),faker.datatype.number(),faker.datatype.number(),faker.datatype.number(),faker.datatype.number()],
    floatArray: [faker.datatype.float(),faker.datatype.float(),faker.datatype.float(),faker.datatype.float(),faker.datatype.float()],
    booleanArray: [faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean()],
    dateTimeArray: [faker.datatype.datetime(),faker.datatype.datetime(),faker.datatype.datetime(),faker.datatype.datetime(),faker.datatype.datetime()],
    json: {test: faker.lorem.word()},
    jsonWithDefault: {},
    jsonWithDefaultAndFake: {test2: faker.lorem.word()},
    nullableJson: undefined,
    enum: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
    enumWithDefault: Enum.A,
    nullableEnum: undefined,
  };
}
export function fakeUser2Complete() {
  return {
    id: faker.datatype.number(),
  };
}
export function fakeUserRelationComplete() {
  return {
    id: faker.datatype.uuid(),
    userId: faker.datatype.uuid(),
    userId2: faker.datatype.uuid(),
  };
}
export function fakeUser2RelationComplete() {
  return {
    id: faker.datatype.uuid(),
    user2Id: faker.datatype.number(),
  };
}
"
`;
